--- a/name_calculator/index.html
+++ b/name_calculator/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <script src="js\angular.min.js" charset="utf-8"></script>
     <script src="js\app.js" charset="utf-8"></script>
-    <title>My first AngularJS App</title>
+    <title>Name Calculator</title>
   </head>
   <body>
-    <h1>My First AngularJS App</h1>
+    <h1>Name Calculator</h1>
     <div ng-controller="MyFirstController">
       {{sayHello()}}
       <input type="text" ng-model="name">
