--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     Here is a list of all app examples I made while following Coursera’s “Single Page Web Applications with AngularJS” course:
     <ul>
       <li> <a href="./first_angularjs_app/index.html"> First AngularJS Binding Example </a> </li>
-      <li> <a href="./name_calculator/index.html"> A Name To Numeric Value Calculator </a> </li>
+      <li> <a href="./name_calculator/index.html"> A Name-to-Numeric-Value Calculator </a> </li>
+      <li> <a href="./dependency_injection/index.html"> An Example of Dependency Injection </a> </li>
     </ul>
 
   </body>
