minified javascript suitably for AngularJS

--- a/dependency_injection/index.html
+++ b/dependency_injection/index.html
@@ -14,7 +14,7 @@
       ng-model="name"
       ng-blur="upper();">
       <br />
-      You typed: {{upperName}}
+      What you typed in uppercase: {{upperName}}
       <br />
     </div>
   </body>
