Switching photos with angularjs expression evaluation

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <ul>
       <li> <a href="./first_angularjs_app/index.html"> First AngularJS Binding Example </a> </li>
       <li> <a href="./name_calculator/index.html"> A Name-to-Numeric-Value Calculator </a> </li>
-      <li> <a href="./dependency_injection/index.html"> An Example of Dependency Injection </a> </li>
+      <li> <a href="./dependency_injection/index.html"> An Example of Dependency Injection with Minification </a> </li>
+      <li> <a href="./expressions_interpolation/index.html"> Expressions and Interpolation </a> </li>
+      <li> <a href="./graded_assignment1/index.html"> Module 1 Peer Graded Coding Assignment </a> </li>
     </ul>
-
   </body>
 </html>
