--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <li> <a href="./first_angularjs_app/index.html"> First AngularJS Binding Example </a> </li>
       <li> <a href="./name_calculator/index.html"> A Name-to-Numeric-Value Calculator </a> </li>
       <li> <a href="./dependency_injection/index.html"> An Example of Dependency Injection with Minification </a> </li>
-      <li> <a href="./expressions_interpolation/index.html"> Expressions and Interpolation </a> </li>
+      <li> <a href="./expressions_interpolation/index.html"> Expressions, Interpolation and Filters </a> </li>
       <li> <a href="./module1_solution/index.html"> Module 1 Peer Graded Coding Assignment </a> </li>
     </ul>
   </body>
