Added $watch, $digest, $apply, $timeout examples with a counter

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <li> <a href="./dependency_injection/index.html"> An Example of Dependency Injection with Minification </a> </li>
       <li> <a href="./expressions_interpolation/index.html"> Expressions, Interpolation and Filters </a> </li>
       <li> <a href="./module1_solution/index.html"> Module 1 Peer Graded Coding Assignment </a> </li>
+
+      <li> <a href="./digest-cycle/index.html"> The Digest Cycle </a> </li>
     </ul>
   </body>
 </html>
